--- a/style2.css
+++ b/style2.css
@@ -1,15 +1,44 @@
-body{
-    margin: 0;
-    background: url(assets/back.jpg) no-repeat;
-    background-size: cover;
+@media only screen and (min-width: 1200px){
+    body{
+        margin: 0;
+        background: url(assets/back.jpg) no-repeat;
+        background-size: 100vw 100vh;
+    }
+    .box p{
+        width: 43%;
+        margin: auto;
+        line-height: 25px;
+    }
+    .box footer{
+        font-size: 2em;
+        margin-top: 6%;
+    }
+    .box footer i{
+        margin: 0 1cm 0 1cm;
+    }
 }
 
-
+@media only screen and (max-width: 1200px) {
+    body {
+      background-color:#13152A;
+    }
+    .box p{
+        width: 85vw;
+        font-size: 18px;
+        margin: auto;
+    }
+    .box footer{
+        font-size: 25px;
+        margin-top: 55%;
+    }
+    .box footer i{
+        margin: 0 1cm 0 1cm;
+    }
+}
 .box{
     margin: auto;
-    margin-top: 0.5%;
-    width: 1300px;
-    height: 650px;
+    width: 100%;
+    height: 100vh;
     background-color: rgba(0, 0, 0, 0.5);
     text-align: center;
     font-family: Calibre, "San Francisco", "SF Pro Text", -apple-system, system-ui, BlinkMacSystemFont, Roboto, "Helvetica Neue", "Segoe UI", Arial, sans-serif;
@@ -22,11 +51,11 @@ body{
 }
 
 .dp{
-    margin-top: 10%;
+    margin-top: 10vh;
     border-radius: 50%;
     border-color: azure;
     border: groove;
-    width: 200px;
+    width: 20vw;
 }
 
 .box h1{
@@ -35,18 +64,9 @@ body{
 .box h3{
     font-weight: 100;
 }
-.box p{
-    width: 490px;
-    margin: auto;
-    line-height: 25px;
-}
-.box footer{
-    font-size: 2em;
-    margin-top: 6%;
-}
-.box footer i{
-    margin: 0 1cm 0 1cm;
-}
+
+
 .box footer a{
     color: aliceblue;
 }
+
